@@ -1,5 +1,9 @@
 2014-02-21  Jason Merrill  <jason@redhat.com>
 
+	DR 1591
+	PR c++/60051
+	* pt.c (unify): Only unify if deducible.  Handle 0-length list.
+
 	PR c++/60250
 	* parser.c (cp_parser_direct_declarator): Don't wrap a
 	type-dependent expression in a NOP_EXPR.
